--- a/app/.gitignore
+++ b/app/.gitignore
@@ -3,14 +3,19 @@
 *.apk
 *.ap_
 
-.gradle
-.idea
+# Files for the Dalvik VM
+*.dex
 
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
 
 # Gradle files
 .gradle/
 build/
-gradle
 
 # Local configuration file (sdk path, etc)
 local.properties
